azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyser__syntax__parser__tests__parse_directive-7.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parser.finish()
---
Parse {
    node: Directive@0..4
      DirectiveToken@0..1 "%"
      DirectiveName@1..4 "FOO"
    ,
    errors: [],
}
